@@ -1,5 +1,6 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
+import net.corda.plugins.Cordform
+
+apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'idea'
 apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.cordapp'
@@ -7,9 +8,12 @@ apply plugin: 'net.corda.plugins.cordformation'
 
 dependencies {
     if (System.getProperty('excludeShell') == null) {
-        cordaDriver "net.corda:corda-shell:$corda_release_version"
+        cordaDriver "net.corda:corda-shell:$corda_shell_version"
     }
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    implementation project(":core-test-utils")
+    implementation project(":test-utils")
+    implementation "org.slf4j:slf4j-api:$slf4j_version"
 
     // The bank of corda CorDapp depends upon Cash CorDapp features
     cordapp project(':finance:contracts')
@@ -18,23 +22,30 @@ dependencies {
     // Cordformation needs a SLF4J implementation when executing the Network
     // Bootstrapper, but Log4J doesn't shutdown completely from within Gradle.
     // Use a much simpler SLF4J implementation here instead.
-    cordaRuntime "org.slf4j:slf4j-simple:$slf4j_version"
+    cordaRuntimeOnly "org.slf4j:slf4j-simple:$slf4j_version"
 
     // Corda integration dependencies
-    cordaRuntime project(path: ":node:capsule", configuration: 'runtimeArtifacts')
-    cordaRuntime project(path: ":testing:testserver:testcapsule:", configuration: 'runtimeArtifacts')
-    cordaCompile project(':core')
-    cordaCompile project(':client:jfx')
-    cordaCompile project(':client:rpc')
-    cordaCompile(project(':testing:testserver')) {
+    corda project(path: ":node:capsule", configuration: 'runtimeArtifacts')
+    corda project(path: ":testing:testserver:testcapsule:", configuration: 'runtimeArtifacts')
+
+    cordaProvided project(':core')
+    cordaProvided project(':client:jfx')
+    cordaProvided project(':client:rpc')
+    cordaProvided(project(':testing:testserver')) {
         exclude group: "org.apache.logging.log4j"
     }
-    cordaCompile (project(':node-driver')) {
+    cordaProvided (project(':node-driver')) {
         exclude group: "org.apache.logging.log4j"
     }
 
+    cordaBootstrapper "org.slf4j:slf4j-simple:$slf4j_version"
+    cordaBootstrapper project(":node-api")
+
     // Javax is required for webapis
-    compile "org.glassfish.jersey.core:jersey-server:${jersey_version}"
+    implementation "org.glassfish.jersey.core:jersey-server:${jersey_version}"
+    implementation "org.glassfish.jersey.inject:jersey-hk2:$jersey_version"
+    implementation "net.sf.jopt-simple:jopt-simple:$jopt_simple_version"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
 
     // Test dependencies
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_jupiter_version}"
@@ -45,9 +56,9 @@ dependencies {
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_version}"
 }
 
-def nodeTask = tasks.getByPath(':node:capsule:assemble')
-def webTask = tasks.getByPath(':testing:testserver:testcapsule::assemble')
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask, webTask]) {
+configurations.cordaCordapp.canBeResolved = true
+tasks.register('deployNodes', Cordform) {
+    dependsOn('jar', ':node:capsule:assemble', ':testing:testserver:testcapsule::assemble')
     nodeDefaults {
         cordapp project(':finance:workflows')
         cordapp project(':finance:contracts')
@@ -55,7 +66,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask, 
     }
     node {
         name "O=Notary Node,L=Zurich,C=CH"
-        notary = [validating: true,
+        notary = [validating      : true,
                   serviceLegalName: "O=Notary Service,L=Zurich,C=CH"
         ]
         p2pPort 10002
@@ -103,38 +114,28 @@ idea {
     }
 }
 
-task runRPCCashIssue(type: JavaExec) {
+tasks.register('runRPCCashIssue', JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'net.corda.bank.IssueCash'
+    mainClass = 'net.corda.bank.IssueCash'
+
     args '--role'
     args 'ISSUE_CASH_RPC'
     args '--quantity'
     args 20000
     args '--currency'
     args 'USD'
-    if (JavaVersion.current() == JavaVersion.VERSION_11) {
-        jvmArgs '--add-opens'
-        jvmArgs 'java.base/java.time=ALL-UNNAMED'
-        jvmArgs '--add-opens'
-        jvmArgs 'java.base/java.io=ALL-UNNAMED'
-    }
 }
 
-task runWebCashIssue(type: JavaExec) {
+tasks.register('runWebCashIssue', JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'net.corda.bank.IssueCash'
+    mainClass = 'net.corda.bank.IssueCash'
+
     args '--role'
     args 'ISSUE_CASH_WEB'
     args '--quantity'
     args 30000
     args '--currency'
     args 'GBP'
-    if (JavaVersion.current() == JavaVersion.VERSION_11) {
-        jvmArgs '--add-opens'
-        jvmArgs 'java.base/java.time=ALL-UNNAMED'
-        jvmArgs '--add-opens'
-        jvmArgs 'java.base/java.io=ALL-UNNAMED'
-    }
 }
 
 jar {
@@ -147,10 +148,4 @@ jar {
 
 cordapp {
     targetPlatformVersion corda_platform_version.toInteger()
-    minimumPlatformVersion 1
-    info {
-        name "Bank of Corda Demo"
-        version "1"
-        vendor "R3"
-    }
 }
